@@ -1,7 +1,7 @@
 ## $Id$
 
 # https://sourceforge.net/tracker/?func=detail&atid=476037&aid=1981932&group_id=55124
-MAKEFLAGS = -j1
+#MAKEFLAGS = -j1
 
 SUBDIRS = . BuzzMachineLoader
 
@@ -17,19 +17,15 @@ libbml_la_SOURCES = bml.c
 libbml_HEADERS = bml.h ./BuzzMachineLoader/BuzzMachineLoader.h
 
 if USE_DLLWRAPPER1
-libbml_la_LIBADD = \
-	$(top_builddir)/dllwrapper1/wine/libloader.la \
-        $(BML_LIBS)
+WRAPPER_LIBS = $(top_builddir)/dllwrapper1/wine/libloader.la
 endif
-
 if USE_DLLWRAPPER2
-libbml_la_LIBADD = \
-	$(top_builddir)/dllwrapper2/libloader.la \
-        $(BML_LIBS)
+WRAPPER_LIBS = $(top_builddir)/dllwrapper2/libloader.la
 endif
 
 libbml_la_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
 libbml_la_LDFLAGS = -lm -lpthread -ldl
+libbml_la_LIBADD = $(BML_LIBS) $(WRAPPER_LIBS)
 
 bin_PROGRAMS=bmltest_info bmltest_process
 
